Fix alignment of join section

--- a/style.css
+++ b/style.css
@@ -157,7 +157,7 @@ footer a:hover {
     background: linear-gradient(#193f6faa, #193f6fee),  url("images/reception.jpg");
     background-size: cover;
     background-position: center;
-    height:20em;
+    height:25em;
 
     display:flex;
     flex-direction: column;
@@ -167,7 +167,11 @@ footer a:hover {
 }
 .title h1 {
     margin:0.25em 0;
-    font-size: 2em;
+    font-size: 2.5em;
+}
+.title h2 {
+    font-size: 1.9em;
+    font-weight: 400;
 }
 
 
@@ -334,6 +338,7 @@ footer a:hover {
     display:flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    margin:0 8em;
+    padding:0 3em;
+    box-sizing: border-box;
     align-items: center;
 }
